--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 
 <body>
   <div class="home-page">
+
     <header class="home-header">
       <div class="home-header-bar">
         <img src="img/logo.jpg" alt="Logo Panadería Doble J" class="home-logo">
         <span class="home-header-title">PANADERIA DOBLE J</span>
       </div>
+
       <p class="home-slogan">
         UN BUEN PAN TE ALEGRA EL DÍA Y NUESTRO MAYOR PLACER ES ALEGRAR TU DÍA
       </p>
     </header>
 
     <main class="home-main">
+
       <section class="home-cards" aria-label="Categorías principales">
         <article class="home-card">
           <a href="panes.html" class="home-card-link">
@@ -46,14 +49,17 @@
       <section class="home-history" aria-labelledby="historia-title">
         <div class="home-history-text">
           <h2 id="historia-title">Nuestra historia</h2>
+
           <p>
             La Panadería Doble J nació del sueño de dos hermanos, Juanky y Juanaco, 
             que compartían una misma pasión: el pan recién hecho.
           </p>
+
           <p>
-            Todo comenzó en un pequeño horno familiar, donde las madrugadas se llenaban del aroma 
-            a masa recién horneada y café caliente.
+            Todo comenzó en un pequeño horno familiar, donde las madrugadas se llenaban 
+            del aroma a masa recién horneada y café caliente.
           </p>
+
           <p>
             Hoy seguimos horneando con la misma dedicación de nuestros inicios.
             <br>
@@ -66,24 +72,31 @@
         </figure>
       </section>
 
-      <p class="home-cta">
-        <a class="btn btn--primary" href="carrito.html">CONTACTANOS</a>
-      </p>
+      <section class="home-contact-block">
+        <h2 class="contact-title">Contáctanos</h2>
 
-      <section class="home-bottom">
-    <div class="home-map">
-      <img src="img/maps.png" alt="Ubicación en mapa">
-    </div>
+        <div class="contact-wrapper">
+          <div class="contact-map">
+            <img src="img/maps.png" alt="Ubicación en el mapa">
+          </div>
 
-    <div class="home-contact-info">
-      <p>correo: <a href="mailto:panaderiadoblej@gmail.com">panaderiadoblej@gmail.com</a></p>
-      <p>teléfono: 644568599</p>
-      <p>dirección: Plaza los jardines celestiales</p>
-      <p>139 Calle al paraíso &nbsp; 04617</p>
-    </div>
-</section>
+          <div class="contact-info">
+            <p><strong>Correo:</strong> 
+              <a href="mailto:panaderiadoblej@gmail.com">panaderiadoblej@gmail.com</a>
+            </p>
+            <p><strong>Teléfono:</strong> 644 568 599</p>
+            <p><strong>Dirección:</strong> Plaza los Jardines Celestiales</p>
+            <p><strong>Local:</strong> 139 Calle al Paraíso — 04617</p>
+          </div>
+        </div>
+
+        <p class="home-cta">
+          <a class="btn btn--primary" href="carrito.html">REALIZAR PEDIDO</a>
+        </p>
+      </section>
 
     </main>
+
   </div>
 </body>
 </html>
