--- a/cafes.html
+++ b/cafes.html
@@ -49,7 +49,7 @@
 
         <section class="cafes-catalogo" aria-labelledby="catalogo-title">
           <h2 id="catalogo-title" class="section-title section-title--center">
-            También podrás disfrutar de nuestro catálogo de cafés especiales
+            También podrás disfrutar de nuestro catálogo de cafés especiales por 2,50 €
           </h2>
 
           <div class="catalogo__wrap">
@@ -73,5 +73,7 @@
       loading="lazy"
     ></iframe>
   </div>
+  <button class="theme-toggle" id="themeToggle" aria-label="Cambiar modo claro/oscuro"></button>
+  <script src="theme.js"></script>
 </body>
 </html>
