--- a/carrito.html
+++ b/carrito.html
@@ -168,5 +168,7 @@
       });
     })();
   </script>
+  <button class="theme-toggle" id="themeToggle" aria-label="Cambiar modo claro/oscuro"></button>
+  <script src="theme.js"></script>
 </body>
 </html>
