--- a/panes.html
+++ b/panes.html
@@ -98,5 +98,8 @@
     loading="lazy"
   ></iframe>
   </div>
+
+  <button class="theme-toggle" id="themeToggle" aria-label="Cambiar modo claro/oscuro"></button>
+  <script src="theme.js"></script>
 </body>
 </html>
