--- a/postres.html
+++ b/postres.html
@@ -30,6 +30,7 @@
           </figure>
           <div class="card__body">
             <h3 class="card__title">Tarta de Queso</h3>
+            <p class="card__price">3,20 €</p>
           </div>
         </article>
 
@@ -39,6 +40,7 @@
           </figure>
           <div class="card__body">
             <h3 class="card__title">Tarta 3 Chocolates</h3>
+            <p class="card__price">3,40 €</p>
           </div>
         </article>
 
@@ -48,6 +50,7 @@
           </figure>
           <div class="card__body">
             <h3 class="card__title">Tarta de Oreo</h3>
+            <p class="card__price">3,20 €</p>
           </div>
         </article>
 
@@ -57,6 +60,7 @@
           </figure>
           <div class="card__body">
             <h3 class="card__title">Tarta de Frutas</h3>
+            <p class="card__price">3,50 €</p>
           </div>
         </article>
 
@@ -66,6 +70,7 @@
           </figure>
           <div class="card__body">
             <h3 class="card__title">Tarta de la Yaya</h3>
+            <p class="card__price">3,60 €</p>
           </div>
         </article>
 
@@ -75,6 +80,7 @@
           </figure>
           <div class="card__body">
             <h3 class="card__title">Red Velvet</h3>
+            <p class="card__price">3,80 €</p>
           </div>
         </article>
       </section>
@@ -91,6 +97,7 @@
     loading="lazy"
   ></iframe>
   </div>
-  </script>
+  <button class="theme-toggle" id="themeToggle" aria-label="Cambiar modo claro/oscuro"></button>
+  <script src="theme.js"></script>
 </body>
 </html>
