--- a/carrito.html
+++ b/carrito.html
@@ -42,7 +42,7 @@
                        type="number" value="0" min="0" readonly>
               </div>
 
-              <button class="btn btn--add" type="button" data-add="qty-pan">ADD</button>
+              <button class="btn btn--add" type="button" data-add="qty-pan">Añadir</button>
             </div>
           </article>
 
@@ -65,7 +65,7 @@
                        type="number" value="0" min="0" readonly>
               </div>
 
-              <button class="btn btn--add" type="button" data-add="qty-tarta">ADD</button>
+              <button class="btn btn--add" type="button" data-add="qty-tarta">Añadir</button>
             </div>
           </article>
 
@@ -88,7 +88,7 @@
                        type="number" value="0" min="0" readonly>
               </div>
 
-              <button class="btn btn--add" type="button" data-add="qty-cafe">ADD</button>
+              <button class="btn btn--add" type="button" data-add="qty-cafe">Añadir</button>
             </div>
           </article>
           <fieldset class="pickup">
@@ -109,7 +109,7 @@
           <div class="order-actions">
             <button class="btn btn--buy" type="submit"
                     disabled aria-disabled="true">
-              BUY NOW
+              Comprar
             </button>
           </div>
         </form>
