--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         </figure>
       </section>
 
-      <section class="home-contact-block">
+      <a href="contacto.html" class="contact-wrapper-link">
+      <section class="home-contact-block home-contact-clickable">
         <h2 class="contact-title">Contáctanos</h2>
 
         <div class="contact-wrapper">
@@ -78,8 +79,8 @@
           </div>
 
           <div class="contact-info">
-            <p><strong>Correo:</strong> 
-              <a href="mailto:panaderiadoblej@gmail.com">panaderiadoblej@gmail.com</a>
+            <p><strong>Correo:</strong>
+              <span>panaderiadoblej@gmail.com</span>
             </p>
             <p><strong>Teléfono:</strong> 644 568 599</p>
             <p><strong>Dirección:</strong> Plaza los Jardines Celestiales</p>
@@ -87,6 +88,7 @@
           </div>
         </div>
       </section>
+    </a>
     </main>
 
     <section class="pedido-separado">
